# gest

./: AGENT.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: RELEASE.md
src/: app.rs  cache.rs  cli.rs  events.rs  go.rs  lib.rs  main.rs  model.rs  repo.rs  runner.rs  ui.rs  watcher.rs
tests/: app_harness.rs  app_interaction.rs  registry_integration.rs  runner_cancel.rs
tests/fixtures/: subtests.jsonl  tfdiags_output.jsonl  tfdiags_panic.jsonl
