[package]
name = "gest"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
crossbeam-channel = "0.5"
crossterm = "0.27"
fuzzy-matcher = "0.3"
notify = "6.1"
num_cpus = "1.16"
once_cell = "1.19"
ratatui = "0.26"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
